some renaming in notebooks

--- a/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_API_Gateway_REST_API.ipynb
+++ b/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_API_Gateway_REST_API.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "# Set AWS credentials if not using Amazon SageMaker notebook\n",
     "import os\n",
-    "import agentc_core_utils\n",
+    "import agent_core_utils\n",
     "os.environ['AWS_DEFAULT_REGION'] = 'us-east-1'\n",
     "\n"
    ],
@@ -50,8 +50,8 @@
    "cell_type": "code",
    "source": [
     "#### Create an IAM role for the Gateway to assume\n",
-    "import agentc_core_utils\n",
-    "agentcore_gateway_iam_role = agentc_core_utils.create_agentcore_gateway_role(\"sample-lambdagateway\")\n",
+    "import agent_core_utils\n",
+    "agentcore_gateway_iam_role = agent_core_utils.create_agentcore_gateway_role(\"sample-lambdagateway\")\n",
     "print(\"Agentcore gateway role ARN: \", agentcore_gateway_iam_role['Role']['Arn'])"
    ],
    "id": "3c9e75be06bf74bf",
@@ -83,13 +83,13 @@
     "cognito = boto3.client(\"cognito-idp\", region_name=REGION)\n",
     "\n",
     "print(\"Creating or retrieving Cognito resources...\")\n",
-    "user_pool_id = agentc_core_utils.get_or_create_user_pool(cognito, USER_POOL_NAME)\n",
+    "user_pool_id = agent_core_utils.get_or_create_user_pool(cognito, USER_POOL_NAME)\n",
     "print(f\"User Pool ID: {user_pool_id}\")\n",
     "\n",
-    "agentc_core_utils.get_or_create_resource_server(cognito, user_pool_id, RESOURCE_SERVER_ID, RESOURCE_SERVER_NAME, SCOPES)\n",
+    "agent_core_utils.get_or_create_resource_server(cognito, user_pool_id, RESOURCE_SERVER_ID, RESOURCE_SERVER_NAME, SCOPES)\n",
     "print(\"Resource server ensured.\")\n",
     "\n",
-    "client_id, client_secret  = agentc_core_utils.get_or_create_m2m_client(cognito, user_pool_id, CLIENT_NAME, RESOURCE_SERVER_ID)\n",
+    "client_id, client_secret  = agent_core_utils.get_or_create_m2m_client(cognito, user_pool_id, CLIENT_NAME, RESOURCE_SERVER_ID)\n",
     "print(f\"Client ID: {client_id}\")\n",
     "\n",
     "# Get discovery URL\n",
@@ -200,10 +200,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import agentc_core_utils\n",
+    "import agent_core_utils\n",
     "\n",
     "print(\"Requesting the access token from Amazon Cognito authorizer...May fail for some time till the domain name propogation completes\")\n",
-    "token_response = agentc_core_utils.get_token(user_pool_id, client_id, client_secret,scopeString,REGION)\n",
+    "token_response = agent_core_utils.get_token(user_pool_id, client_id, client_secret,scopeString,REGION)\n",
     "token = token_response[\"access_token\"]\n",
     "print(\"Token response:\", token)"
    ],
@@ -263,7 +263,7 @@
     "        agent(\"Give me the information about order with id 1200\")\n",
     "        agent('Can you provide the information about the user who made this purchase')\n",
 	"        agent('Can you list orders created between 1 of August 2025 5 am and 5 of August 2025 3 am. '\n",
-	"        Please use the date the following date format, for example: 2025-08-02T19:50:55')\n",
+	"        'Please use the date the following date format, for example: 2025-08-02T19:50:55')\n",
     "gateway_url = \"${YOUR_Gateway_resource_URL}\"\n",
     "run_agent(gateway_url, fetch_access_token())"
    ],
