--- a/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_Lambda_Function_Target.ipynb
+++ b/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_Lambda_Function_Target.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "code",
    "source": [
     "import os\n",
-    "import agentc_core_utils\n",
+    "import agent_core_utils\n",
     "\n",
     "os.environ['AWS_DEFAULT_REGION'] = 'us-east-1' # set the AWS region"
    ],
@@ -70,13 +70,13 @@
     "else:\n",
     "    current_dir = os.getcwd()  # Fallback if __file__ is not defined (e.g., Jupyter)\n",
     "\n",
-    "# Navigate to the directory containing agentc_core_utils.py (one level up)\n",
+    "# Navigate to the directory containing agent_core_utils.py (one level up)\n",
     "#utils_dir = os.path.abspath(os.path.join(current_dir, '..'))\n",
     "\n",
     "\n",
     "# Add to sys.path\n",
     "sys.path.insert(0, current_dir)\n",
-    "import agentc_core_utils\n"
+    "import agent_core_utils\n"
    ],
    "id": "6720143e3cb9a973",
    "outputs": [],
@@ -87,8 +87,8 @@
    "cell_type": "code",
    "source": [
     "#### Create an IAM role for the Gateway to assume\n",
-    "import agentc_core_utils\n",
-    "agentcore_gateway_iam_role = agentc_core_utils.create_agentcore_gateway_role(\"sample-lambdagateway-role\")\n",
+    "import agent_core_utils\n",
+    "agentcore_gateway_iam_role = agent_core_utils.create_agentcore_gateway_role(\"sample-lambdagateway-role\")\n",
     "print(\"Agentcore gateway role ARN: \", agentcore_gateway_iam_role['Role']['Arn'])"
    ],
    "id": "ee151d4cd0444cc4",
@@ -122,13 +122,13 @@
     "cognito = boto3.client(\"cognito-idp\", region_name=REGION)\n",
     "\n",
     "print(\"Creating or retrieving Cognito resources...\")\n",
-    "user_pool_id = agentc_core_utils.get_or_create_user_pool(cognito, USER_POOL_NAME)\n",
+    "user_pool_id = agent_core_utils.get_or_create_user_pool(cognito, USER_POOL_NAME)\n",
     "print(f\"User Pool ID: {user_pool_id}\")\n",
     "\n",
-    "agentc_core_utils.get_or_create_resource_server(cognito, user_pool_id, RESOURCE_SERVER_ID, RESOURCE_SERVER_NAME, SCOPES)\n",
+    "agent_core_utils.get_or_create_resource_server(cognito, user_pool_id, RESOURCE_SERVER_ID, RESOURCE_SERVER_NAME, SCOPES)\n",
     "print(\"Resource server ensured.\")\n",
     "\n",
-    "client_id, client_secret  = agentc_core_utils.get_or_create_m2m_client(cognito, user_pool_id, CLIENT_NAME, RESOURCE_SERVER_ID)\n",
+    "client_id, client_secret  = agent_core_utils.get_or_create_m2m_client(cognito, user_pool_id, CLIENT_NAME, RESOURCE_SERVER_ID)\n",
     "print(f\"Client ID: {client_id}\")\n",
     "\n",
     "# Get discovery URL\n",
@@ -233,10 +233,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import agentc_core_utils\n",
+    "import agent_core_utils\n",
     "\n",
     "print(\"Requesting the access token from Amazon Cognito authorizer...May fail for some time till the domain name propogation completes\")\n",
-    "token_response = agentc_core_utils.get_token(user_pool_id, client_id, client_secret,scopeString,REGION)\n",
+    "token_response = agent_core_utils.get_token(user_pool_id, client_id, client_secret,scopeString,REGION)\n",
     "token = token_response[\"access_token\"]\n",
     "print(\"Token response:\", token)"
    ],
