added some agentcore gateway stuff to expose api gateway as mcp server and some jupiter notebook for it, including open api spec

--- a/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_API_Gateway_REST_API.ipynb
+++ b/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_API_Gateway_REST_API.ipynb
@@ -262,8 +262,8 @@
     "        agent = Agent(model=model, tools=tools)\n",
     "        agent(\"Give me the information about order with id 1200\")\n",
     "        agent('Can you provide the information about the user who made this purchase')\n",
-	"        agent('Can you list orders created between 1 of August 2025 5 am and 5 of August 2025 3 am. '\n",
-	"        'Please use the date the following date format, for example: 2025-08-02T19:50:55')\n",
+	"        agent('Can you list orders created between 1 of August 2025 5am and 5 of August 2025 3am. '\n",
+	"        'Please use the following date format, for example: 2025-08-02T19:50:55')\n",
     "gateway_url = \"${YOUR_Gateway_resource_URL}\"\n",
     "run_agent(gateway_url, fetch_access_token())"
    ],
