updated notebook for exposing Lambdas as MCPs

--- a/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_Lambda_Function_Target.ipynb
+++ b/sample-app-with-pgjdbc/src/main/resources/AmazonBedrockAgentCoreGateway_Lambda_Function_Target.ipynb
@@ -61,34 +61,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "# Get the directory of the current script\n",
-    "if '__file__' in globals():\n",
-    "    current_dir = os.path.dirname(os.path.abspath(__file__))\n",
-    "else:\n",
-    "    current_dir = os.getcwd()  # Fallback if __file__ is not defined (e.g., Jupyter)\n",
-    "\n",
-    "# Navigate to the directory containing agent_core_utils.py (one level up)\n",
-    "#utils_dir = os.path.abspath(os.path.join(current_dir, '..'))\n",
-    "\n",
-    "\n",
-    "# Add to sys.path\n",
-    "sys.path.insert(0, current_dir)\n",
-    "import agent_core_utils\n"
-   ],
-   "id": "6720143e3cb9a973",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "#### Create an IAM role for the Gateway to assume\n",
     "import agent_core_utils\n",
-    "agentcore_gateway_iam_role = agent_core_utils.create_agentcore_gateway_role(\"sample-lambdagateway-role\")\n",
+    "agentcore_gateway_iam_role = agent_core_utils.create_agentcore_gateway_role(\"sample-lambdagateway\")\n",
     "print(\"Agentcore gateway role ARN: \", agentcore_gateway_iam_role['Role']['Arn'])"
    ],
    "id": "ee151d4cd0444cc4",
@@ -152,7 +127,7 @@
     "        \"discoveryUrl\": cognito_discovery_url\n",
     "    }\n",
     "}\n",
-    "create_response = gateway_client.create_gateway(name='LambdaGetOrderByIdGateway',\n",
+    "create_response = gateway_client.create_gateway(name='LambdaOrderGateway',\n",
     "    roleArn = agentcore_gateway_iam_role['Role']['Arn'], # The IAM Role must have permissions to create/list/get/delete Gateway\n",
     "    protocolType='MCP',\n",
     "    authorizerType='CUSTOM_JWT',\n",
@@ -174,36 +149,52 @@
    "cell_type": "code",
    "source": [
     "# Replace the AWS Lambda function ARN below\n",
-    "lambda_target_config = {\n",
+    "order_by_id_lambda_target_config = {\n",
     "    \"mcp\": {\n",
     "        \"lambda\": {\n",
-    "            \"lambdaArn\": 'arn:aws:lambda:us-east-1:265634257610:function:GetOrderByIdWithJava21Lambda', # Replace this with your AWS Lambda function ARN\n",
+    "            \"lambdaArn\": '${YourGetOrderByIdLambdaFunctionARN}', # Replace this with your AWS Lambda function ARN\n",
     "            \"toolSchema\": {\n",
     "                \"inlinePayload\": [\n",
     "                    {\n",
-    "                        \"name\": \"get_order_tool\",\n",
-    "                        \"description\": \"tool to get the order\",\n",
+    "                        \"name\": \"get_order_by_id_tool\",\n",
+    "                        \"description\": \"tool to get the order by id\",\n",
     "                        \"inputSchema\": {\n",
     "                            \"type\": \"object\",\n",
     "                            \"properties\": {\n",
-    "                                \"orderId\": {\n",
+    "                                \"id\": {\n",
     "                                    \"type\": \"string\"\n",
     "                                }\n",
     "                            },\n",
-    "                            \"required\": [\"orderId\"]\n",
+    "                            \"required\": [\"id\"]\n",
     "                        }\n",
-    "                    },\n",
+    "                    }\n",
+    "                ]\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "order_by_created_dates_lambda_target_config = {\n",
+    "    \"mcp\": {\n",
+    "        \"lambda\": {\n",
+    "            \"lambdaArn\": '${YourGetOrdersByCreatedDatesLambdaFunctionARN}', # Replace this with your AWS Lambda function ARN\n",
+    "            \"toolSchema\": {\n",
+    "                \"inlinePayload\": [\n",
     "                    {\n",
-    "                        \"name\": \"update_order_tool\",\n",
-    "                        \"description\": \"tool to update the orderId\",\n",
+    "                        \"name\": \"get_orders_by_created_dates_tool\",\n",
+    "                        \"description\": \"tool to get the order by created dates\",\n",
     "                        \"inputSchema\": {\n",
     "                            \"type\": \"object\",\n",
     "                            \"properties\": {\n",
-    "                                \"orderId\": {\n",
+    "                                \"startDate\": {\n",
+    "                                    \"type\": \"string\"\n",
+    "                                },\n",
+    "\n",
+    "                                \"endDate\": {\n",
     "                                    \"type\": \"string\"\n",
     "                                }\n",
     "                            },\n",
-    "                            \"required\": [\"orderId\"]\n",
+    "                            \"required\": [\"startDate\",\"endDate\"]\n",
     "                        }\n",
     "                    }\n",
     "                ]\n",
@@ -217,12 +208,20 @@
     "        \"credentialProviderType\" : \"GATEWAY_IAM_ROLE\"\n",
     "    }\n",
     "]\n",
-    "targetname='GetOrderByIdLambdaTarget'\n",
+    "order_by_id_targetname='GetOrderByIdLambda'\n",
     "response = gateway_client.create_gateway_target(\n",
     "    gatewayIdentifier=gatewayID,\n",
-    "    name=targetname,\n",
-    "    description='Lambda Target',\n",
-    "    targetConfiguration=lambda_target_config,\n",
+    "    name=order_by_id_targetname,\n",
+    "    description='Order by id Lambda Target',\n",
+    "    targetConfiguration=order_by_id_lambda_target_config,\n",
+    "    credentialProviderConfigurations=credential_config)\n",
+    "\n",
+    "order_by_id_targetname='GetOrderByCreatedDatesLambda'\n",
+    "response = gateway_client.create_gateway_target(\n",
+    "    gatewayIdentifier=gatewayID,\n",
+    "    name=order_by_id_targetname,\n",
+    "    description='Orders by created dates Lambda Target',\n",
+    "    targetConfiguration=order_by_created_dates_lambda_target_config,\n",
     "    credentialProviderConfigurations=credential_config)"
    ],
    "id": "d7f279f72c3e95c0",
@@ -259,10 +258,14 @@
     "\n",
     "\n",
     "def fetch_access_token():\n",
-    "  return token;\n",
+    "    return token;\n",
+    "\n",
     "\n",
     "def create_streamable_http_transport(mcp_url: str, access_token: str):\n",
-    "       return streamablehttp_client(mcp_url, headers={\"Authorization\": f\"Bearer {token}\"})\n",
+    "    return streamablehttp_client(\n",
+    "        mcp_url,\n",
+    "        #timeout=1,\n",
+    "        headers={\"Authorization\": f\"Bearer {token}\"})\n",
     "\n",
     "\n",
     "def get_full_tools_list(client):\n",
@@ -282,10 +285,11 @@
     "            pagination_token = tmp_tools.pagination_token\n",
     "    return tools\n",
     "\n",
+    "\n",
     "def run_agent(mcp_url: str, access_token: str):\n",
     "    model = BedrockModel(\n",
-    "    model_id=\"us.amazon.nova-pro-v1:0\",\n",
-    "    temperature=0.7)\n",
+    "        model_id=\"us.amazon.nova-pro-v1:0\",\n",
+    "        temperature=0.7)\n",
     "    mcp_client = MCPClient(lambda: create_streamable_http_transport(mcp_url, access_token))\n",
     "\n",
     "    with mcp_client:\n",
@@ -293,12 +297,17 @@
     "        print(f\"Found the following tools: {[tool.tool_name for tool in tools]}\")\n",
     "\n",
     "        agent = Agent(model=model, tools=tools)\n",
-    "        agent(\"Give me the information about order with id 100\")\n",
-    "        agent('Can you provide the information about the user who made this purchase')\n",
+    "        #agent(\"Give me the information about order with id 12345 \")\n",
+    "        #agent('In case you found the order, can you provide the information about the user who made #this purchase')\n",
+    "        agent('Can you list orders created between 1 of August 2025 5am and 5 of August 2025 3am. '\n",
+    "              'Please use the following date format, for example: 2025-08-02T19:50:55')\n",
+    "        agent('What is the total value of all these orders together?')\n",
+    "\n",
+    "\n",
     "gateway_url = \"${YOUR_Gateway_resource_URL}\"\n",
     "run_agent(gateway_url, fetch_access_token())"
    ],
-   "id": "39b298ac03a9cb3a",
+   "id": "928a70eefcaf7039",
    "outputs": [],
    "execution_count": null
   }
